Fix compile warnins.